--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,40 @@
   list-style-type: none;
   text-decoration: none;
 }
+body{
+  color: #333333;
+  font-family: 'Work Sans', sans-serif;
+}
+
+
+/* work-sans-300 - latin */
+@font-face {
+  font-family: 'Work Sans';
+  font-style: normal;
+  font-weight: 300;
+  src: url('../fonts/work-sans-v13-latin-300.eot'); /* IE9 Compat Modes */
+  src: local(''),
+       url('../fonts/work-sans-v13-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/work-sans-v13-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/work-sans-v13-latin-300.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/work-sans-v13-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/work-sans-v13-latin-300.svg#WorkSans') format('svg'); /* Legacy iOS */
+}
+/* work-sans-regular - latin */
+@font-face {
+  font-family: 'Work Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/work-sans-v13-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local(''),
+       url('../fonts/work-sans-v13-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/work-sans-v13-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/work-sans-v13-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/work-sans-v13-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/work-sans-v13-latin-regular.svg#WorkSans') format('svg'); /* Legacy iOS */
+}
+
+
 
 .header {
   width: 1414px;
@@ -30,6 +64,9 @@
 
 .header-items {
   margin-right: 40px;
+  font-size: 15px;
+  line-height: 10px;
+  color: #222222;
 }
 
 .header-items:hover {
@@ -51,16 +88,16 @@
   padding:8px 26px ;
   transform: rotate(90deg);
   height:36px ;
-  left: -35px;
+  left: -55px;
   top: 150px;
   background: #39CDCC;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  border-radius: 0px 0px 6px 6px;
+  border-radius: 0px 6px 6px 0;
 }
 
 /* -------------------- */
 /*    main section      */
-\*----------------------*/
+/*----------------------*/
 
 .boxes {
   max-width: 1440px;
@@ -68,7 +105,7 @@
   margin-right: auto;
 }
 
-.container-title {
+.container__title {
   font-size: 45px;
   font-weight: normal;
   line-height: 50px;
@@ -77,7 +114,7 @@
   margin-bottom: 40px;
 }
 
-.all-box {
+.all__box {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -92,7 +129,7 @@
   border-top: 13px solid #582EFF;
 }
 
-.box-link {
+.box__link {
   display: inline-block;
   text-decoration: none;
   color: #333333;
@@ -120,19 +157,20 @@
   box-shadow: 0px 0px 10px #B7B7B7;
 }
 
-.box-title {
+.box__title {
   font-size: 17px;
   line-height: 20px;
   padding-bottom: 31px;
 }
 
-.box-text {
-  width: 262px;
+.box__text {
   font-size: 16px;
   line-height: 25px;
+  text-align: center;
+  color: #333333;
 }
 
-.box-link::before {
+.box__link::before {
   content: "";
   background-image: url(../img/phone.png);
   width: 53px;
@@ -142,7 +180,7 @@
   padding-left: 60px;
 }
 
-.second-box {
+.second--box {
   width: 303px;
   border-top: 13px solid #FF814A;
 }
@@ -164,7 +202,7 @@
   padding-left: 70px;
 } 
 
-.threed-box {
+.threed--box {
 width: 277px;
 border-top: 13px solid #31C5A1;
 }
@@ -206,7 +244,7 @@ transition: none;
 
 /* -------------------- */
 /*    main section      */
-\*----------------------*/
+/*----------------------*/
 
 
 .store {
