--- a/css/style.css
+++ b/css/style.css
@@ -4,40 +4,47 @@
   list-style-type: none;
   text-decoration: none;
 }
-body{
+
+body {
   color: #333333;
   font-family: 'Work Sans', sans-serif;
 }
 
+a {
+  display: inline-block;
+}
 
 /* work-sans-300 - latin */
+
 @font-face {
   font-family: 'Work Sans';
   font-style: normal;
   font-weight: 300;
-  src: url('../fonts/work-sans-v13-latin-300.eot'); /* IE9 Compat Modes */
-  src: local(''),
-       url('../fonts/work-sans-v13-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/work-sans-v13-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/work-sans-v13-latin-300.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/work-sans-v13-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/work-sans-v13-latin-300.svg#WorkSans') format('svg'); /* Legacy iOS */
+  src: url('../fonts/work-sans-v13-latin-300.eot');
+  /* IE9 Compat Modes */
+  src: local(''), url('../fonts/work-sans-v13-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('../fonts/work-sans-v13-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../fonts/work-sans-v13-latin-300.woff') format('woff'), /* Modern Browsers */
+  url('../fonts/work-sans-v13-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('../fonts/work-sans-v13-latin-300.svg#WorkSans') format('svg');
+  /* Legacy iOS */
 }
+
 /* work-sans-regular - latin */
+
 @font-face {
   font-family: 'Work Sans';
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/work-sans-v13-latin-regular.eot'); /* IE9 Compat Modes */
-  src: local(''),
-       url('../fonts/work-sans-v13-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/work-sans-v13-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/work-sans-v13-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/work-sans-v13-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/work-sans-v13-latin-regular.svg#WorkSans') format('svg'); /* Legacy iOS */
+  src: url('../fonts/work-sans-v13-latin-regular.eot');
+  /* IE9 Compat Modes */
+  src: local(''), url('../fonts/work-sans-v13-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('../fonts/work-sans-v13-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../fonts/work-sans-v13-latin-regular.woff') format('woff'), /* Modern Browsers */
+  url('../fonts/work-sans-v13-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('../fonts/work-sans-v13-latin-regular.svg#WorkSans') format('svg');
+  /* Legacy iOS */
 }
-
-
 
 .header {
   width: 1414px;
@@ -45,49 +52,39 @@ body{
   margin-right: auto;
   padding: 45px 100px;
   padding-bottom: 0;
-  
 }
 
-.header-list {
+.header__list {
   display: flex;
   align-items: center;
 }
 
-.header-links {
+.header__links {
   display: flex;
   align-items: center;
 }
 
-.img-logo {
+.img__links {
   margin-right: 165px;
 }
 
-.header-items {
+.header__items {
   margin-right: 40px;
   font-size: 15px;
   line-height: 10px;
   color: #222222;
 }
 
-.header-items:hover {
+.header__items:hover {
   color: #0082F3;
 }
 
-.about-contacts {
-  /* margin-bottom: 0;
-  width:108px ;
-  height: 36px;
-
-  margin-top: 100px;
-  transform: rotate(90deg);
-  background: #39CDCC;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  border-radius: 0px 0px 6px 6px; */
+.about__contacts {
   position: absolute;
-  width:108px ;
-  padding:8px 26px ;
+  width: 108px;
+  padding: 8px 26px;
   transform: rotate(90deg);
-  height:36px ;
+  height: 36px;
   left: -55px;
   top: 150px;
   background: #39CDCC;
@@ -96,30 +93,32 @@ body{
 }
 
 /* -------------------- */
+
 /*    main section      */
+
 /*----------------------*/
 
 .boxes {
   max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
-}
+}-
 
 .container__title {
   font-size: 45px;
-  font-weight: normal;
   line-height: 50px;
+  font-weight: normal;
   text-align: center;
   color: #333333;
   margin-bottom: 40px;
 }
 
 .all__box {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-left: 194px;
-    margin-right: 194px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-left: 194px;
+  margin-right: 194px;
 }
 
 .box {
@@ -139,7 +138,6 @@ body{
   padding-right: 10px;
   padding-bottom: 75px;
   padding-top: 151px;
-  
 }
 
 .first {
@@ -147,8 +145,8 @@ body{
 }
 
 .box:hover {
-    background: rgba(189, 188, 188, 0.096);
-    transform: translateY(-10px);
+  background: rgba(189, 188, 188, 0.096);
+  transform: translateY(-10px);
 }
 
 .box:active {
@@ -200,82 +198,84 @@ body{
   background-repeat: no-repeat;
   padding-top: 91px;
   padding-left: 70px;
-} 
+}
 
 .threed--box {
-width: 277px;
-border-top: 13px solid #31C5A1;
+  width: 277px;
+  border-top: 13px solid #31C5A1;
 }
 
 .threed {
-padding-left: 7.5px;
-padding-right: 7.5px;
-padding-bottom: 75px;
-padding-top: 151px;
+  padding-left: 7.5px;
+  padding-right: 7.5px;
+  padding-bottom: 75px;
+  padding-top: 151px;
 }
 
 .threed::before {
-content: "";
-background-image: url(../img/money.png);
-width: 78px;
-height: 68px;
-background-repeat: no-repeat;
-padding-top: 91px;
-padding-left: 80px;
-} 
+  content: "";
+  background-image: url(../img/money.png);
+  width: 78px;
+  height: 68px;
+  background-repeat: no-repeat;
+  padding-top: 91px;
+  padding-left: 80px;
+}
 
 .left {
-border: none;
-background: #582EFF;
-padding: 10px 15px;
-border-radius: 50%;
-transition: all 0.5s ease;
+  border: none;
+  background: #582EFF;
+  padding: 10px 15px;
+  border-radius: 50%;
+  transition: all 0.5s ease;
 }
 
 .left:hover {
-background: #582eff98;
+  background: #582eff98;
 }
 
 .left:active {
-background: #2a157a;
-transition: none;
+  background: #2a157a;
+  transition: none;
 }
-
 
 /* -------------------- */
+
 /*    main section      */
+
 /*----------------------*/
 
-
 .store {
-background:#31C5A1 ;
-display: flex;
-justify-content: center;
+  background: #31C5A1;
+  display: flex;
+  justify-content: center;
 }
-.store__texts{
-  margin: 0 auto ;
+
+.store__texts {
+  margin: 0 auto;
   max-width: 555px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.store__subtitle{
+
+.store__subtitle {
   margin-top: 131px;
   margin-bottom: 40px;
   font-family: Work Sans;
-font-style: normal;
-font-weight: normal;
-font-size: 30px;
-line-height: 35px;
-text-align: center;
-color: #FFFFFF;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 30px;
+  line-height: 35px;
+  text-align: center;
+  color: #FFFFFF;
 }
-.store__link{
+
+.store__link {
   margin-right: 10px;
 }
-.store__box{
+
+.store__box {
   margin-bottom: 80px;
 }
-
-
